layout: fix ie11 layout issues

--- a/components/layout/style.scss
+++ b/components/layout/style.scss
@@ -17,6 +17,9 @@ $layout__gutter: dp(24);
     // IE11 is currently unsupported due to lack of automatic placement
     display: grid;
     display: -ms-grid;
+    .mdw-layout__item {
+      min-width: 100%;
+    }
   }
   &[mdw-dense] {
     grid-auto-flow: row dense;
@@ -38,22 +41,22 @@ $layout__gutter: dp(24);
   margin-left: -$layout__gutter;
   margin-top: -$layout__gutter;
 
+  &[mdw-margin-top] {
+    padding-top: $layout__margin;
+  }
   &[mdw-margin-bottom] {
     padding-bottom: $layout__margin;
   }
   
-  &[mdw-margin-top] {
-    padding-top: $layout__margin;
-  }
 
   @include margin16dp {
     padding-left: dp(16);
     padding-right: dp(16);
-    &[mdw-margin-bottom] {
-      padding-bottom: dp(16);
-    }
     &[mdw-margin-top] {
       padding-top: dp(16);
+    }
+    &[mdw-margin-bottom] {
+      padding-bottom: dp(16);
     }
   }
 
@@ -69,8 +72,8 @@ $layout__gutter: dp(24);
       }
     }
     &[mdw-gutter="#{$value}"] {
-      margin-left: dp(-$value);
       margin-top: dp(-$value);
+      margin-left: dp(-$value);
       & > .mdw-layout__item {
         padding-top: dp($value);
         padding-left: dp($value);
@@ -91,8 +94,8 @@ $layout__gutter: dp(24);
         }
       }
       &[mdw-gutter-mobile="#{$value}"] {
-        margin-left: dp(-$value);
         margin-top: dp(-$value);
+        margin-left: dp(-$value);
         > .mdw-layout__item {
           padding-top: dp($value);
           padding-left: dp($value);
@@ -114,8 +117,8 @@ $layout__gutter: dp(24);
         }
       }
       &[mdw-gutter-tablet="#{$value}"] {
-        margin-left: dp(-$value);
         margin-top: dp(-$value);
+        margin-left: dp(-$value);
         > .mdw-layout__item {
           padding-top: dp($value);
           padding-left: dp($value);
@@ -128,14 +131,16 @@ $layout__gutter: dp(24);
 @mixin layoutItem($columnCount) {
   &[mdw-colspan="1"],
   &:not([mdw-colspan]) {
-    flex-basis: calc(100% / #{$columnCount});
+    width: calc(100% / #{$columnCount});
   }
   @for $i from 2 to 12 {
     &[mdw-colspan="#{$i}"] {
-      flex-basis: calc((#{$i} * 100% / #{$columnCount}));
       @if ($i > $columnCount) {
         grid-column-end: span #{$columnCount};
         -ms-grid-column-span: span #{$columnCount};
+        width: 100%;
+      } @else {
+        width: calc((#{$i} * 100% / #{$columnCount}));
       }
     }
   }
@@ -144,20 +149,20 @@ $layout__gutter: dp(24);
       $value: $percent / 100 * $columnCount;
       @if ($value < 1) {
         $value: $columnCount;
-        flex-basis: 100%;
+        width: 100%;
       }
       grid-column-end: span #{$value};
       -ms-grid-column-span: span #{$value};
     }
   }
+  &[mdw-stretch] {
+    max-width: none;
+  }
 }
 
 .mdw-layout__item {
-  flex-direction: column;
-  min-width: 0;
-  min-height: 0;
   max-width: 100%;
-
+  max-height: 100%;
   flex-grow: 0;
   flex-shrink: 1;
   box-sizing: border-box;
@@ -174,7 +179,7 @@ $layout__gutter: dp(24);
       -ms-grid-column-span: span #{$i};
     }
   }
-  transition-property: flex, padding;
+  transition-property: flex, width, padding;
   transition-timing-function: $motion-easing-standard;
   transition-duration: $motion-duration-desktop-default;
   @include allHandsets {
@@ -187,25 +192,30 @@ $layout__gutter: dp(24);
   @include layoutItem(12);
 
   &[mdw-colspan="25%"] {
-    flex-basis: 25%;
+    width: 25%;
   }
   &[mdw-colspan="50%"] {
-    flex-basis: 50%;
+    width: 50%;
   }
   &[mdw-colspan="75%"] {
-    flex-basis: 75%;
+    width: 75%;
   }
   &[mdw-colspan="100%"] {
-    flex-basis: 100%;
+    width: 100%;
   }
 
-  // Stretch children
+  display: block;
+}
+
+.mdw-layout__content {
+  // For IE11 flexbugs
   display: flex;
-  & > :first-child {
-    flex: 100%;
-    max-height: 100%;
-    max-width: 100%;
-  }
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 // 8 Columns (Explicit on Desktop + Implicit on Tablet)
